--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday!</title>
+    <title>Happy Valentine!</title>
     <!-- refer to the favicon -->
     <link rel="icon" href="assets/favicon/favicon.ico" type="image/x-icon">
     <!-- refer to the bootstrap css file -->
